# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  all  checker  list of values  push_swap  test.c  test.sh
includes/: push_swap.h  push_swap.h.gch
libft/: .Makefile.swn  .Makefile.swo  .gitignore  Makefile  README.md
libft/ft_printf/: .gitignore  buff_val.c  ft_pr_buffnwstr.c  ft_pr_itoa_ubase_gbuff.c  ptr_char.c  ptr_flag.c  ptr_nbr.c
libft/includes/: color.h  ft_printf.h  get_next_line.h  libft.h  liblst.h  linux_compiler.h  push_swap.h
libft/is/: ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_isupper.c
libft/lib/: ft_charcat.c  ft_charcatcount.c  ft_charcatcount_glim.c  ft_charchr.c  ft_exec_parse.c  ft_exec_parse_ac.c  ft_exec_parse_str.c  ft_exec_parse_strstr.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memdel.c  ft_memset.c  ft_print_array.c  ft_putchar_fd.c  ft_putcharuni.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_base_fd.c  ft_putnbr_unsigned_base_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_toupper.c  ft_wcharlen.c  ft_wstrlen.c  ft_wstrlen_conv.c
libft/lst/: README.md  ft_add_t_data_next.c  ft_add_t_pile_next.c  ft_add_t_str_next.c  ft_add_tdata_next.c  ft_add_tpile_next.c  ft_add_tstr_next.c  ft_arerelpos_next.c  ft_get_int_order.c  ft_get_lst_from_val_position.c  ft_get_lst_val_from_absposition.c  ft_get_pile_data.c  ft_get_str_str.c  ft_get_t_data_data.c  ft_get_tdata_data.c  ft_get_tpile_data.c  ft_get_tpile_pos.c  ft_get_tpile_position.c  ft_get_tstr_str.c  ft_getabspos_fromlst.c  ft_getabspos_fromval.c  ft_getabspos_fromvar.c  ft_getlst_fromabspos.c  ft_getlst_fromrelpos.c  ft_getlst_fromrelpos_btwtlst.c  ft_getlst_fromval_relpos.c  ft_getlst_maxval.c  ft_getlst_minval.c  ft_getlst_minval_above.c  ft_getlst_minval_above_btwtlst.c  ft_getlst_smallerval.c  ft_getlst_smallerval_above.c  ft_getlst_smallestval.c  ft_getlstlen.c  (+53 more)
srcs/: 12.c  checker.c  exec.c  ft_add_t_data_next.c  ft_add_t_str_next.c  ft_atoi_exit.c  ft_check_ps_flags.c  ft_exec_ac_parse.c  ft_exec_parse.c  ft_free_next_data.c  ft_get_int_abspos.c  ft_get_int_order.c  ft_get_pile_data.c  ft_get_pile_position.c  ft_get_t_data_position.c  ft_init_ps_head.c  ft_init_t_data_head.c  ft_is_data_in.c  ft_is_there_inf.c  ft_is_there_inf_int.c  ft_lst_count_lim.c  ft_lst_is_max_min_sorted.c  ft_lst_is_min_max_sorted.c  ft_next_t_data_issorted.c  ft_print_next_data.c  ft_print_next_str.c  ft_pushswap_operation.c  ft_t_data_is_max_min_sorted.c  ps_free.c  ps_print.c  push_swap.c
(+152 files in other folders)
